<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/io.pinguinocontrol"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@color/DarkSlateGray3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_Ports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/netsettings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33b5e5"
        android:textSize="30sp" 
        custom:typeface="roboto"/>

    <EditText
        android:id="@+id/Edit_Port_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Edit_IP_1"
        android:layout_below="@+id/Edit_IP_1"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/Button_a2"
        android:background="@drawable/trans1"
        android:ems="10"
        android:hint="@string/portNumber"
        android:inputType="numberDecimal"
        android:textColor="@color/White" />

    <EditText
        android:id="@+id/Edit_IP_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_An_value"
        android:layout_alignBottom="@+id/text_An_value"
        android:layout_toLeftOf="@+id/Button_a2"
        android:background="@drawable/trans1"
        android:ems="10"
        android:hint="@string/targetIP"
        android:textColor="@color/White" />

    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_An_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_Ports"
        android:layout_marginTop="45dp"
        android:text="@string/ipAdrs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33b5e5" 
        custom:typeface="roboto"/>


    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_offon_AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_Port_1"
        android:layout_alignBottom="@+id/Edit_Port_1"
        android:layout_alignLeft="@+id/text_An_value"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33b5e5" 
        custom:typeface="roboto"/>


    <Button
        android:id="@+id/Button_a2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/text_An_value"
        android:layout_below="@+id/Edit_Port_1"
        android:layout_marginRight="30dp"
        android:layout_marginTop="17dp"
        android:alpha="1"
        android:background="@drawable/rect"
        android:ellipsize="start"
        android:onClick="connect"
        android:shadowColor="@color/White"
        android:text="@string/connect"
        android:textColor="@color/white" />

</RelativeLayout>