<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/io.pinguinocontrol"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="544dp"
    android:orientation="vertical" >

    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_Port_AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:text="@string/pwm1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White"
        custom:typeface="roboto" />

    <EditText
        android:id="@+id/edit_text_pwm1"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:background="@drawable/trans1"
        android:ems="10"
        android:focusable="false"
    	android:focusableInTouchMode="false"
        android:hint="@string/zero"
        android:inputType="none"
        android:paddingLeft="50dp"
        android:textColor="@color/White" >

        <requestFocus />
    </EditText>

    <SeekBar
        android:id="@+id/SeekBar03"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="100"
        android:onClick="seek1"
        android:paddingTop="10dp"
        android:progress="0"      
      	android:maxHeight="0.3dp"
      	android:paddingLeft="20dp"
      	android:paddingRight="20dp"
        android:progressDrawable="@drawable/seekbar_progress" 
        android:secondaryProgress="100"
        android:thumb="@drawable/thumb_small" />

    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_An_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:text="@string/pwm2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White"
        custom:typeface="roboto" />

    <EditText
        android:id="@+id/edit_text_pwm2"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:background="@drawable/trans1"
        android:ems="10"
        android:hint="@string/zero"
        android:focusable="false"
    	android:focusableInTouchMode="false"
        android:inputType="none"
        android:paddingLeft="50dp"
        android:textColor="@color/White" />

    <SeekBar
        android:id="@+id/SeekBar02"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="100"
        android:onClick="seek1"
        android:paddingTop="10dp"
        android:progress="0"      
      	android:maxHeight="0.3dp"
      	android:paddingLeft="20dp"
      	android:paddingRight="20dp"
        android:progressDrawable="@drawable/seekbar_progress" 
        android:secondaryProgress="100"
        android:thumb="@drawable/thumb_small" />

    <io.pinguinocontrol.TypefacedTextView
        android:id="@+id/text_offon_AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:text="@string/pwm3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" 
        custom:typeface="roboto" />

    <EditText
        android:id="@+id/edit_text_pwm3"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:background="@drawable/trans1"
        android:ems="10"
        android:focusable="false"
    	android:focusableInTouchMode="false"
        android:hint="@string/zero"
        android:inputType="none"
        android:paddingLeft="50dp"
        android:textColor="@color/White" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="100"
        android:onClick="seek1"
        android:paddingTop="10dp"
        android:progress="0"      
      	android:maxHeight="0.3dp"
      	android:paddingLeft="20dp"
      	android:paddingRight="20dp"
        android:progressDrawable="@drawable/seekbar_progress" 
        android:secondaryProgress="100"
        android:thumb="@drawable/thumb_small" />

</LinearLayout>
</ScrollView>
