<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/io.pinguinocontrol"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_port_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/pin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/White"
                custom:typeface="roboto" />

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_value_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/anValue"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                custom:typeface="roboto" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A0_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A0"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="aA0"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A1_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A1"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA1"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A2_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A2"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA2"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A3_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A3"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA3"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A4_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A4"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA4"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A5_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A5"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA5"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A6_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A6"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA6"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
        
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dp" >

            <io.pinguinocontrol.TypefacedTextView
                android:id="@+id/text_A7_AI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/a7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                custom:typeface="roboto" />
            
            <EditText
                android:id="@+id/editText_A7"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@drawable/trans1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:text="@string/zero"
                android:textColor="@color/White" >

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox_A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:onClick="aA7"
                    android:text="@string/nulo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />    
        
        

    </LinearLayout>

</ScrollView>
        
    
